--- a/style.css
+++ b/style.css
@@ -2407,6 +2407,8 @@ ul.scrollButtons li.right a:hover {
   width: 690px;
 }
 .magazine .post.featured .text {
+  position: absolute;
+  bottom: 0;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
   /* IE 8 */
 
@@ -2447,14 +2449,8 @@ ul.scrollButtons li.right a:hover {
   /* IE6-9 */
 
   color: #FFF;
-  padding: 10px 15px 5px 15px;
-  height: 66px;
-  overflow: hidden;
-  border-bottom-width: 10px;
-  border-bottom-style: solid;
-  border-bottom-color: #1d1d1d;
+  padding: 10px 15px;
   line-height: 14px;
-  margin-top: -91px;
 }
 .magazine .post.featured .text strong {
   font-weight: normal;
@@ -2469,16 +2465,8 @@ ul.scrollButtons li.right a:hover {
 .magazine .post .entry-meta span {
   display: none;
 }
-.magazine .featured .text h2 {
-  color: #FFF;
-  margin: 0px !important;
-  font-size: 18px;
-  height: 28px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  -o-text-overflow: ellipsis;
-  -ms-text-overflow: ellipsis;
-  overflow: hidden;
+.magazine #content .featured .text h2 {
+  margin-top: 0px;
 }
 .magazine .featured .text a,
 .magazine .featured .text h2 a {
